<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorldIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="Sign_in">Sign in</string>
    <string name="Confirm">Confirm</string>
    <string name="Register_text">Sign up</string>
    <string name="Register">Register</string>
    <string name="Logo">WorldIt</string>
    <string name="email">Email adresss</string>
    <string name="password">Password</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="take_photo">Take a profile picture</string>
    <string name="title_activity_register">WorldIt</string>
    <string name="title_activity_search">WorldIt</string>
    <string name="users_name">First name</string>
    <string name="title_activity_settings">WorldIt</string>
    <string name="title_activity_results">WorldIt</string>
    <string name="search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Country">Country Name</string>
    <string name="title_activity_settings_menu">WorldIt</string>
    <string name="changeUserInfo">Edit Personal Details</string>
    <string name="changeColours">Edit Colours</string>
    <string name="back">Back</string>
    <string name="settingsMenuHeading">Settings Menu</string>
    <string name="title_activity_colour_settings">WorldIt</string>
    <string name="colourMenuHeading">Colour Menu</string>
    <string name="Background">Background</string>

</resources>
